Changed Interests text.

--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
         <section class="l-Section u-hidden@print">
           <h2 class="l-Section-title h3">Interests</h2>
           <div class="l-Section-content">
-            <p>User Experience, Accessibility, Web Standards, Automatization, Technology, Simplicity, Snowboarding, Bouldering, Coffee, Food, Art, Music, Movies, Traveling, Cabins, Plants, Goats, Chickens</p>
+            <p>Coffee, Food, Art, Music, Movies, Traveling, Cabins, Plants, Technology, People</p>
           </div>
         </section>
       </article>
       
       <div class="l-Wrapper u-keyline">
         <div class="l-Footer">
-          <div class="l-Footer-col">
-            <strong class="Tag">S. Strieder</strong>
-          </div>
+        
           <div class="l-Footer-col Contact">
             <a href="http://cargocollective.com/phsr" target="_blank">cargocollective.com/phsr</a>
             <a href="mailto:pauloschinzel@outlook.com" target="_blank">pauloschinzel@outlook.com</a>
